Maradjon meg a forráskód

--- a/gpx-parser/pom.xml
+++ b/gpx-parser/pom.xml
@@ -69,6 +69,7 @@
                     <sources>
                         <source>src/main/resources/xsd</source>
                     </sources>
+                    <clearOutputDir>false</clearOutputDir>
                 </configuration>
             </plugin>
         </plugins>
